objects/Manage_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Setup-Licenses​</fullName>
                </value>
                <value>
                    <fullName>​​Administration-Answer Formats</fullName>
                </value>
                <value>
                    <fullName>Administration-Contact Websites</fullName>
                </value>
                <value>
                    <fullName>Administration-Custom Fields</fullName>
                </value>
                <value>
                    <fullName>Administration-Custom URL / Domain</fullName>
                </value>
                <value>
                    <fullName>Administration-Editors and Lead Coordinators</fullName>
                </value>
                <value>
                    <fullName>Administration-Email Settings</fullName>
                </value>
                <value>
                    <fullName>Administration-External Calendar</fullName>
                </value>
                <value>
                    <fullName>Administration-Floor Plans</fullName>
                </value>
                <value>
                    <fullName>Administration-General</fullName>
                </value>
                <value>
                    <fullName>Administration-Image Editor</fullName>
                </value>
                <value>
                    <fullName>Administration-Lead Scoring</fullName>
                </value>
                <value>
                    <fullName>Administration-Libraries</fullName>
                </value>
                <value>
                    <fullName>Administration-Onsite User Logins</fullName>
                </value>
                <value>
                    <fullName>Administration-Other</fullName>
                </value>
                <value>
                    <fullName>Administration-Password Reset / Locked</fullName>
                </value>
                <value>
                    <fullName>Administration-Revenue/Profit Targets</fullName>
                </value>
                <value>
                    <fullName>Administration-RFP Labels</fullName>
                </value>
                <value>
                    <fullName>Administration-Rooms</fullName>
                </value>
                <value>
                    <fullName>Administration-Spaces</fullName>
                </value>
                <value>
                    <fullName>Administration-Users</fullName>
                </value>
                <value>
                    <fullName>Administration-Users, Groups &amp; Roles</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Admission Items</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Item Availability</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Optional Items</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Sessions</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Tickets (Express)</fullName>
                </value>
                <value>
                    <fullName>Agenda Items-Tracks</fullName>
                </value>
                <value>
                    <fullName>Availability-Meeting Space</fullName>
                </value>
                <value>
                    <fullName>Availability-Sleeping Rooms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductArea__c</fullName>
        <description>It is unique field contains product+area ,and autopopulated</description>
        <label>ProductArea</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSN - Planners</fullName>
                </value>
                <value>
                    <fullName>CSN - Search &amp; DG</fullName>
                </value>
                <value>
                    <fullName>CSN - Suppliers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Manage_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>This object used to manage the assignment of the Enhancement request as per the product &amp; Area.</description>
    <label>Manage Assignment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Manage Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>